# ComS_557_2016_am

./: .gitignore  LICENSE  README.md
02_3D_Modeling/: hw2_main.cpp
Final Project/: ALL_BUILD.vcxproj  Ball.cpp  Ball.h  Block.cpp  Block.h  BlockColorSequencer.cpp  BlockColorSequencer.h  BoundingBox.cpp  BoundingBox.h  CMakeCache.txt  CMakeLists.txt  CollisionObject.cpp  CollisionObject.h  FieldConfiguration.h  GL_Breakout_Program.sln  GL_Breakout_Program.vcxproj  Paddle.cpp  Paddle.h  README.md  TogglableSpotLightSource.cpp  TogglableSpotLightSource.h  Wall.cpp  Wall.h  ZERO_CHECK.vcxproj  cmake_install.cmake  gl_breakout_main.cpp  resource.h
Final Project/gl_common/: GLObject.h  GLObjectObj.cpp  GLObjectObj.h  HCI557Common.cpp  Texture.cpp  Texture.h  controls.cpp
Final Project/models/: Back_Wall.mtl  Paddle.mtl  Paddle_Textured.mtl  Side_Wall.mtl
Final Project/shaders/: multi_vertex_lights.vert  paddle.frag  paddle.vert  spherical_mapping.vert
Homework_2/: hw2_main.cpp
Homework_3/p1/: CMakeLists.txt  README.md  main.cpp
Homework_3/p1/headers/: BlueSphere.h  GLAppearance.h  GLObject.h  GreenSphere.h  RedSphere.h  SphereBase.h  YellowSphere.h  make_sphere.h
Homework_3/p1/shaders/: multi_spotlight_vs.glsl  test_fs.glsl  (+3 more)
Homework_4/p1/: CMakeLists.txt  ImgLoader.cpp  ImgLoader.h  ShaderFileUtils.cpp  ShaderFileUtils.h  controls.h  hw4_main.cpp  hw4_shader.fs  hw4_shader.vs
Homework_4/p2/: CMakeLists.txt  GLAppearance.cpp  GLAppearance.h  HCI557Common.cpp  Plane3D.h  Texture.cpp  Texture.h  TripleTexture.cpp  TripleTexture.h  controls.h  hw4_part2_fragment_shader.glsl  hw4_part2_main.cpp  hw4_part2_vertex_shader.glsl
(+12 files in other folders)
